# wgpu_learning

./: Cargo.toml  README.md  build.rs
shaders/: challenge_shader.wgsl  shader.wgsl
src/: app.rs  camera.rs  instance.rs  lib.rs  main.rs  state.rs  texture.rs
src/graphics/: graphic.rs  mod.rs  pipeline.rs  texture_bundle.rs  uniform_bundle.rs  uniforms_bundle.rs  vertex_bundle.rs  window_bundle.rs
src/shaders/: colored_triangle.wgsl  shader.wgsl
