[package]
name = "wgpu_voxel"
version = "0.1.0"
authors = ["Rokonio <naelkanada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
winit = "0.25.0"
nalgebra-glm = "0.13.0"
cgmath = "0.18.0"
stderr = "0.8.0"
env_logger = "0.8.4"
log = "0.4.14"
wgpu = "0.9.0"
futures = "0.3.15"
anyhow = "1.0.41"
bytemuck = { version = "1.7.0", features = [ "derive" ] }

